Nuevo commit para conflicto

--- a/css/style-1000px.css
+++ b/css/style-1000px.css
@@ -8,3 +8,4 @@
 /* 1000px (> 480px && < 1200px)                                                  */
 /*********************************************************************************/
 
+/* algo */
